--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Black Dahlia</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/black-dahlia.jpg" alt="">
-              <p class="mb-5"><b>Meaning :</b> Dignity, Elegance, How beautiful you are<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=1">Read</a></p>
+              <p class="mb-5"><b>Meaning :</b> Dignity, Elegance, How beautiful you are<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=1" target="_blank">Read</a></p>
               <a class="btn btn-primary btn-lg rounded-pill flower-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
