--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Orange Crown Imperial</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/orange-crown-imperal.jpg" alt="">
-              <p class="mb-5"><b>Meaning :</b> Powerfulness, Mightiness</p>
+              <p class="mb-5"><b>Meaning :</b> Powerfulness, Mightiness<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=4" target="_blank">Read</a></p>
               <a class="btn btn-primary btn-lg rounded-pill flower-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -579,7 +579,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Yellow Daffodil</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/yellow-daffodil.jpg" alt="">
-              <p class="mb-5"><b>Meaning :</b> Chivalry, Friendship, Unreciprocated love</p>
+              <p class="mb-5"><b>Meaning :</b> Chivalry, Friendship, Unreciprocated love<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=3" target="_blank">Read</a></p>
               <a class="btn btn-primary btn-lg rounded-pill flower-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
