--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Pink Plum Blossom</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/pink-plum-blossom.jpg" alt="">
-              <p class="mb-5"><b>Meaning :</b> Fidelity, Keeping Promises</p>
+              <p class="mb-5"><b>Meaning :</b> Fidelity, Keeping Promises<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=6" target="_blank">Read</a></p>
               <a class="btn btn-primary btn-lg rounded-pill flower-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -535,7 +535,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Red Higanbana</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/red-higanbana.jpg" alt="">
-              <p class="mb-5"><b>Meaning :</b> Reincarnation, Loss, Lost Memories</p>
+              <p class="mb-5"><b>Meaning :</b> Reincarnation, Loss, Lost Memories<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=5" target="_blank">Read</a></p>
               <a class="btn btn-primary btn-lg rounded-pill flower-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
