--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Purple Bellflower</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/purple-bellflower.jpg" alt="">
-              <p class="mb-5"><b>Meaning : Unwavering Love</b></p>
+              <p class="mb-5"><b>Meaning : Unwavering Love</b><br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=7" target="_blank">Read</a></p>
               <a class="btn btn-primary btn-lg rounded-pill flower-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
