--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Blue Hydrangea</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/blue-hydrangea.jpg" alt="">
-              <p class="mb-5"><b>Meaning :</b> Frigidity, Vanity</p>
+              <p class="mb-5"><b>Meaning :</b> Frigidity, Vanity<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=8" target="_blank">Read</a></p>
               <a class="btn btn-primary btn-lg rounded-pill flower-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -444,7 +444,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Green Chrysanthemum</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Green Chrysanthemum<br><a href="https://writer.dek-d.com/dek-d/writer/viewlongc.php?id=1907885&chapter=9" target="_blank">Read</a></h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/flower/green-chrysanthemum.jpg" alt="">
               <p class="mb-5"><b>Meaning :</b> Loyalty, Honestly, Positive Thinking</p>
